<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="185dp"
            android:background="@drawable/app_bar_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <m.com.simpl.BoldCustomTextView
            android:id="@+id/name"
            android:includeFontPadding="false"
            android:text="Roshan Sam"
            android:textColor="@color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"/>
    <m.com.simpl.RegularTextView
            android:id="@+id/phone"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintLeft_toLeftOf="@+id/name"
            android:text="9871675698"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <m.com.simpl.BoldCustomButton
            app:layout_constraintTop_toTopOf="@+id/name"
            android:layout_marginLeft="16dp"
            android:text="@string/change_contact_button_text"
            android:background="@drawable/change_phone_button_rounded_square"
            android:textColor="@color/aqua"
            android:textSize="12dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:includeFontPadding="false"
            app:layout_constraintLeft_toRightOf="@id/name"
            android:layout_width="wrap_content"
            android:layout_height="32dp"/>

    <LinearLayout
            android:gravity="center_vertical"
            android:id="@+id/amount_layout"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toBottomOf="@id/phone"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_background"
            android:layout_height="64dp">

        <m.com.simpl.BoldCustomTextView
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:text="₹"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:layout_height="wrap_content"/>
        <m.com.simpl.BoldCustomEditText
                android:id="@+id/edit_text_amount"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:inputType="number"
                android:background="@null"
                android:cursorVisible="false"
                android:includeFontPadding="false"
                android:hint="@string/bill_amount_hint"
        />

    </LinearLayout>

    <androidx.cardview.widget.CardView
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/amount_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <m.com.simpl.RegularTextView
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:textColor="@color/payment_description"
                    android:text="@string/pay_using_title"/>

            <View
                    android:background="#e6ebe9"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

            <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <RelativeLayout
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/radio_button_balance"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_width="wrap_content"
                            app:buttonTint="@color/single_choice_state_list"
                            android:layout_height="wrap_content"/>

                    <LinearLayout
                            android:layout_marginLeft="4dp"
                            android:layout_centerInParent="true"
                            android:layout_toRightOf="@+id/radio_button_balance"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <m.com.simpl.BoldCustomTextView
                                android:id="@+id/text_simpl_available_balance"
                                android:textColor="@color/payment_title"
                                android:textSize="15dp"
                                android:text="Simpl: ₹2000 available"
                                app:layout_constraintTop_toTopOf="@id/radio_button_balance"
                                app:layout_constraintTop_toBottomOf="@id/radio_button_balance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <m.com.simpl.RegularTextView
                                android:layout_marginTop="1dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="13dp"
                                android:textColor="@color/payment_description"
                                android:text="₹1922 will be charged to your account"
                        />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/radio_button_upi"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:buttonTint="@color/single_choice_state_list"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <LinearLayout
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="4dp"
                            android:layout_toRightOf="@+id/radio_button_upi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <m.com.simpl.BoldCustomTextView
                                android:id="@+id/text_upi"
                                android:textColor="@color/payment_title"
                                android:textSize="15dp"
                                android:text="@string/upi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <m.com.simpl.RegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="13sp"
                                android:textColor="@color/payment_description"
                                android:text="@string/upi_payment_description_text"
                        />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <m.com.simpl.BoldCustomButton
            android:id="@+id/button_pay_bill"
            android:text="@string/pay_bill"
            android:layout_margin="16dp"
            android:background="@drawable/pay_bill_button_rounded_square"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="52dp"/>


</android.support.constraint.ConstraintLayout>